<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000"
    android:weightSum="100"
    >
    <LinearLayout
        android:id="@+id/Fila1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="5sp"
        android:layout_weight="25"
        android:weightSum="100"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:src="@mipmap/logo"
            android:id="@+id/imageView1"
            android:layout_margin="2sp"
            android:contentDescription="@string/img1"
            tools:ignore="NestedWeights" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:src="@mipmap/logo"
            android:id="@+id/imageView2"
            android:layout_margin="2sp"
            android:contentDescription="@string/img2" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:src="@mipmap/logo"
            android:id="@+id/imageView3"
            android:layout_margin="2sp"
            android:contentDescription="@string/img3" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Fila2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="5sp"
        android:layout_weight="25"
        android:weightSum="100"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:src="@mipmap/logo"
            android:id="@+id/imageView4"
            android:layout_margin="2sp"
            android:contentDescription="@string/img4"
            tools:ignore="NestedWeights" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:src="@mipmap/logo"
            android:id="@+id/imageView5"
            android:layout_margin="2sp"
            android:contentDescription="@string/img5" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:src="@mipmap/logo"
            android:id="@+id/imageView6"
            android:layout_margin="2sp"
            android:contentDescription="@string/img6" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Fila3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="5sp"
        android:layout_weight="25"
        android:weightSum="100"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:src="@mipmap/logo"
            android:id="@+id/imageView7"
            android:layout_margin="2sp"
            android:contentDescription="@string/img7"
            tools:ignore="NestedWeights" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:src="@mipmap/logo"
            android:id="@+id/imageView8"
            android:layout_margin="2sp"
            android:contentDescription="@string/img8" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:src="@mipmap/logo"
            android:id="@+id/imageView9"
            android:layout_margin="2sp"
            android:contentDescription="@string/img9" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Fila4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="5sp"
        android:layout_weight="25"
        android:weightSum="100"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:src="@mipmap/logo"
            android:id="@+id/imageView10"
            android:layout_margin="2sp"
            android:contentDescription="@string/img10"
            tools:ignore="NestedWeights" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:src="@mipmap/logo"
            android:id="@+id/imageView11"
            android:layout_margin="2sp"
            android:contentDescription="@string/img11" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:src="@mipmap/logo"
            android:id="@+id/imageView12"
            android:layout_margin="2sp"
            android:contentDescription="@string/img12" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomTiempo"
                android:textColor="#fff"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/jugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomJugar"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_weight="1"
                android:background="#666" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/contador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contador"
                android:textColor="#fff"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/salir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salir"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_weight="1"
                android:background="#666" />
        </TableRow>
    </TableLayout>

</LinearLayout>
